# tokenx

./: .gitignore  .gitmodules  README.md  REFATOR_PLAN.md  TokenX.HF.sln  TokenX.sln  build-and-copy.ps1  build-and-copy.sh  build_test_publish_dotnet.ps1  build_test_publish_dotnet.sh  build_test_publish_rust.ps1  build_test_publish_rust.sh  generate_test_files.py  release.ps1  release.sh  sec.md  temp_output.txt  tests-list.txt
.ext/hf_bridge/: Cargo.toml
.ext/hf_bridge/src/: encoding.rs  lib.rs
.ext/hf_bridge/src/ffi/: chat.rs  decode.rs  generation.rs  mod.rs  models.rs  padding.rs
.ext/hf_bridge/src/generation/: helpers.rs  mod.rs  models.rs
.ext/hf_bridge/tests/: chat_tests.rs  ffi_decode_tests.rs  generation_helpers_tests.rs
.ext/tt_bridge/: Cargo.toml
.github/: CI-CD-IMPLEMENTATION-SUMMARY.md  CI-CD-WORKFLOWS.md  TESTING-CHECKLIST.md
.github/instructions/: build.cpp.instructions.md  ergox.engineering.native.introp.conding.standards.instructions.md
.github/workflows/: canary-release-dotnet.yaml  devskim.yml  ethicalcheck.yml  google-sentence-peice-bridge.yml  (+10 more)
.internal/: CI-CD-BUILD-FIXES.md  CLEANUP-encoding-functions.md  PHASE3-COMPLETE.md  RUST-Warnings-FIXED.md  RUST-Warnings.md
.scope/: initial.md
.tasks/: current.md
docs/: README.md  _config.yml  comparison.md  examples.md  getting-started.md  getting_on_nugget.md  index.md  installation.md
examples/: EXAMPLES_SUMMARY.md
internal/: STRUCTURE.md
src/: Directory.Build.props
tests/: __templates.7z  _tiktoken.7z
tools/: update_sentencepiece_manifests.py  update_tiktoken_manifests.py
(+540 files in other folders)
