[package]
name = "tokenx-bridge"
version = "0.1.0"
authors = ["VecraX"]
edition = "2021"
license = "Apache-2.0"
description = "Native bridge for VecraX tokenizers .NET interop"

[lib]
name = "tokenx_bridge"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ahash = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
minijinja = { version = "1.0.14", default-features = false, features = ["json", "builtins"] }

[target.'cfg(not(any(target_family = "wasm", target_os = "ios", target_os = "android")))'.dependencies]
tokenizers = { version = "0.22.1", features = ["http"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokenizers = { version = "0.22.1", default-features = false, features = [
  "fancy-regex",
  "unstable_wasm",
] }

[target.'cfg(target_os = "ios")'.dependencies]
tokenizers = { version = "0.22.1", default-features = false, features = [
  "fancy-regex",
] }

[target.'cfg(target_os = "android")'.dependencies]
tokenizers = { version = "0.22.1", default-features = false, features = [
  "fancy-regex",
] }

[dev-dependencies]

[package.metadata.tarpaulin]
out-type = ["Xml", "Html", "Lcov"]
output-dir = "coverage"
exclude-files = ["*/tests/*", "*/test.rs"]
all-features = true
timeout = 120
